Added brand colours to CSS and styled text more in depth
-uppercase headers
-brand colours
-font-family

--- a/css/typography.css
+++ b/css/typography.css
@@ -1,11 +1,15 @@
 /*
   Colour Palette
-  - Light teal:  - rgb(0, 100, 0)
-  - Dark red: #600 - rgb(100, 0, 0)
+  - Light teal: rgba(231,255,250,1.00) #E7FFFA
+  - Lime Green: rgba(181,181,8,1.00) #8E8E06
  */
  
- html {
-  font: normal 100%/1.5 Georgia,serif; /* 16px/24px */
+ body{
+	background-color:rgba(231,255,250,1.00);
+ }
+ 
+ html{
+  font: normal 100%/1.5 PT Sans, sans-serif; /* 16px/24px */
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -14,10 +18,16 @@ blockquote, table, hr {
   margin: 0 0 1.5rem;
 }
 
+.banner{
+	background-color:rgba(181,181,8,0.47);
+	text-align: center;
+}
+
 .yotta {
-  font-size: 2.2807rem;
-  line-height: 1.3154;
-  font-family: 'Rochester', cursive;
+	padding-top: 1rem;
+	font-size: 2.2807rem;
+	line-height: 1.3154;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .zetta {
@@ -69,6 +79,7 @@ h1, h2, h3 ,h4 ,h5, h6,
 .brand {
 	font-family: 'PT Sans', sans-serif;
 	font-weight: 400;	
+	text-transform:uppercase;
 	color: #00AABA;
 }
 
@@ -77,7 +88,7 @@ p{
 }
 
 .brand-family{
-	font-family: Helvetica, sans-serif;
+	font-family: 'PT Sans', sans-serif;
 }
 
 .brand-color{
@@ -91,21 +102,21 @@ p{
 
 a,
 a:link{
-	color: #8CFDF5;
+	color: #8E8E06;
 	text-decoration: none;
-	border-bottom: 0.1em solid rgba(0,200,0,0.5);
+	border-bottom: 0.05em solid rgba(154,154,122,1.00);
 	transition: all 200ms linear;
 }
 
 a:visited{
-	color: #08B3A6;
-	border-bottom-color: rgba(150,200,150, 0.5);
+	color: #A7A707;
+	font-style:italic;
 }
 
 a:hover,
 a:focus,
 a:active{
 	color: #8CFDF5;
-	border-bottom-color: #8CFDF5;
+	border-bottom-color: #8E8E06;
 }
 
