--- a/css/typography.css
+++ b/css/typography.css
@@ -20,13 +20,13 @@ NEUTRALS
  }
  
  html{
-  font: normal 100%/1.5 PT Sans, sans-serif; /* 16px/24px */
+  font: normal 100%/1.5 Yanone Kaffeesatz, sans-serif; /* 16px/24px */
 }
 
 h1, h2, h3, h4, h5, h6,
 p, ul, ol, dl,
 blockquote, table, hr {
-  margin: 0 0 1.5rem;
+  margin: 0 0 .5rem;
 }
 
 .banner{
@@ -38,7 +38,7 @@ blockquote, table, hr {
 	padding-top: 1rem;
 	font-size: 2.2807rem;
 	line-height: 1.3154;
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 .zetta {
@@ -88,18 +88,20 @@ small, .milli {
 
 h1, h2, h3 ,h4 ,h5, h6,
 .brand {
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-weight: 400;	
 	text-transform:uppercase;
 	color: #00AABA;
 }
 
 p{
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
+	font-weight:300;
+	font-size:1rem;
 }
 
 .brand-family{
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 .brand-color{
