--- a/css/promos.css
+++ b/css/promos.css
@@ -1,3 +1,47 @@
-@charset "UTF-8";
-/* CSS Document */
+/*
+  Colour Palette
+  
+BABY BOY
+  - Teal: rgba(0,170,186,1.00) #00AABA
+  - Light teal: rgba(231,255,250,1.00) #E7FFFA
+  - Lime Green: rgba(181,181,8,1.00) #8E8E06
+BABY GIRL
+  - Baby Pink : rgba(255,210,247,1.00) #FFD2F7
+  - Bright Pink: rgba(255,136,234,1.00)#FF88EA
+NEUTRALS
+  - Medium Grey/purple: rgba(158,149,157,1.00) #9E959D 
+  - Medium Grey/green: rgba(134,146,144,1.00) #869290
+  -Light Grey: rgba(222,225,224,1.00)#DEE1E0
+  
+ */
+ 
+.img-flex{
+	display: block;
+}
+
+.small-promo{
+	padding: 1rem;
+}
+
+.container {
+    border: 1px solid #DDDDDD;
+    width: 200px;
+    height: 200px;
+    position:relative;
+}
+.tag {
+   float: left;
+	padding-left: 0.5rem;
+    position: absolute;
+    left: 5px;
+    top: 260px;
+    background-color: rgba(255,244,253,0.6);
+	width: 100%;
+}
+
+.header{
+	padding-left:0.5rem;
+	background-color:rgba(255,255,255,0.6);
+	width: 355px;
+}
 
