Added Grid to product-item-list page
-added grid.css
-added common.css

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -18,35 +18,38 @@ NEUTRALS
 .btn-boy,
 .btn-boy:link,
 .btn-boy:visited {
+	margin-left: .5rem;
 	display: inline-block;
 	padding: 0.75em 1em;
 	background-image: linear-gradient(to bottom, #00AABA, #E7FFFA);
 	border-radius: 6px;
 	box-shadow:1px 1px 4px rgba(0,0,0,0.5);	
 	color: #fff;
-	font-weight: bold;
+	font-weight: 200;
 }
 
 .btn-girl,
 .btn-girl:link,
 .btn-girl:visited {
+	margin-left: .5rem;
 	display: inline-block;
-	padding: 0.75em 1em;
+	padding: 0.5em 1em;
 	background-image: linear-gradient(to bottom, #FF88EA, #FFD2F7);
 	border-radius: 6px;
 	box-shadow:1px 1px 4px rgba(0,0,0,0.5);	
 	color: #fff;
-	font-weight: bold;
+	font-weight: 200;
 }
 
 .btn-grey,
 .btn-grey:link,
 .btn-grey:visited {
+	margin-left: .5rem;
 	display: inline-block;
 	padding: 0.75em 1em;
 	background-image: linear-gradient(to bottom, #869290, #DEE1E0);
 	border-radius: 6px;
 	box-shadow:1px 1px 4px rgba(0,0,0,0.5);	
 	color: #fff;
-	font-weight: bold;
+	font-weight: 200;
 }
