--- a/css/typography.css
+++ b/css/typography.css
@@ -117,6 +117,8 @@ p{
 
 a,
 a:link{
+	font-family: 'Yanone Kaffeesatz', sans-serif;
+	margin-top: .75rem;
 	color: #8E8E06;
 	text-decoration: none;
 	border-bottom: 0.05em solid rgba(154,154,122,1.00);
