--- a/css/grid.css
+++ b/css/grid.css
@@ -1,10 +1,10 @@
 .grid{
-	border: 1px solid #00AABA;
+	border: 1px solid #9E959D;
 	overflow: hidden;
 }
 
 .unit{
-	background-color: #fff;
+	background-color:#8E8E06;
 	float:left;
 }
 
@@ -42,10 +42,14 @@
 	}
 	
 	.unit-l-1-4{
-		width:25%
+		width:25%;
 	}
 	
 	.unit-l-1-5{
-		width:20%
+		width:20%;
+	}
+	
+	.unit-l-2-5{
+		width:40%;
 	}
 }
