--- a/css/grid.css
+++ b/css/grid.css
@@ -28,10 +28,17 @@
 	.unit-m-1-2{
 		width: 50%;
 	}
+	
+	.unit-m-1-4{
+		width: 25%;
 }
 
 @media only screen and (min-width: 50em) {
-
+	
+	.unit-l-1-2{
+		width:50%;
+	}
+	
 	.unit-l-1-3{
 		width:33.3%;
 	}
