--- a/css/product-details.css
+++ b/css/product-details.css
@@ -16,7 +16,7 @@ NEUTRALS
  */
  
  .grid-details{
-	 background-color:#F4F5F5;
+	 background-color: #E7FFFA;
 	 overflow: hidden;
 	 border: 1px solid #00AABA;
 	 vertical-align: central;
