--- a/css/typography.css
+++ b/css/typography.css
@@ -126,21 +126,21 @@ a,
 a:link{
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	margin-top: .75rem;
-	color: #8E8E06;
+	color: #869290;
 	text-decoration: none;
 	border-bottom: 0.05em solid rgba(154,154,122,1.00);
 	transition: all 200ms linear;
 }
 
 a:visited{
-	color: #A7A707;
+	color: #9E959D;
 	font-style:italic;
 }
 
 a:hover,
 a:focus,
 a:active{
-	color: #8CFDF5;
+	color: #fff;
 	border-bottom-color:#8E8E06;
 }
 
