--- a/css/typography.css
+++ b/css/typography.css
@@ -130,24 +130,24 @@ p{
 	color: #fff;
 }
 
-.a,
-.a:link{
+a,
+a:link{
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	margin-top: .75rem;
-	color: #869290;
+	color: #9E959D;
 	text-decoration: none;
 	border-bottom: 0.05em solid rgba(154,154,122,1.00);
 	transition: all 200ms linear;
 }
 
-.a:visited{
+a:visited{
 	color: #9E959D;
 	font-style:italic;
 }
 
-.a:hover,
-.a:focus,
-.a:active{
+a:hover,
+a:focus,
+a:active{
 	color: #fff;
 	border-bottom-color:#8E8E06;
 }
