--- a/css/typography.css
+++ b/css/typography.css
@@ -100,7 +100,7 @@ h1, h2, h3 ,h4 ,h5, h6,
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-weight: 400;	
 	text-transform:uppercase;
-	color: #FF88EA;
+	color: #9B0080;
 }
 
 h1, h2, h3 ,h4 ,h5, h6,
