fixed boy links in typography.css /html

--- a/css/forms.css
+++ b/css/forms.css
@@ -84,7 +84,7 @@ input[type="search"]::-webkit-search-decoration {
 #search input[type="search"] {
 	background: #fff;
 	color: #42454e;
-	min-width: 184px;
+	min-width: 30%;
 	padding: 6px 8px;
 }
 
