added colour and height/ width to table int epigraphy css

--- a/css/typography.css
+++ b/css/typography.css
@@ -183,7 +183,21 @@ mark{
 	background-color:#61F1FF;
 }
 
-table, th, td
+table 
 {
-border: 1px solid black;
+width:100%;
+padding-bottom:1rem;
+}
+
+table, td, th {
+border:1px solid green;
+}
+
+th {
+background-color: #CFFFF6;
+height:50px;
+}
+
+td{
+	padding: 1rem;
 }
