--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,21 +2,87 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Ecommerce</title>
+<title>DEFAULT</title>
+<meta name="handheldfriendly" content="true">
+<meta name="mobileoptimized" content="240">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,200,300,700' rel='stylesheet' type='text/css'>	
+	<link href="../css/typography.css" rel="stylesheet">
+	<link href="../css/buttons.css" rel="stylesheet">
+	<link href="../css/media-object.css" rel="stylesheet">
+	<link href="../css/list-group.css" rel="stylesheet">
+	<link href="../css/product-list.css" rel="stylesheet">
+	<link href="../css/promos.css" rel="stylesheet">
+	<link href="../css/forms.css" rel="stylesheet">
+	<link href="../css/grid.css" rel="stylesheet">
+	<link href="../css/common.css" rel="stylesheet">
+	<link href="../css/header.css" rel="stylesheet">
+	<link href="../css/footer.css" rel="stylesheet">
+	<link href="../css/product-details.css" rel="stylesheet">
+</head>
+
 </head>
 <body>
+<div class="grid grid-header">
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
+		<h2><a href="#" class="boy"> Boys</a>	</h2>
+		</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
+		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
+		<h2><a href="#" class="girl" > Girls</a></h2>	
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
+		<div class="container">
+		<div id="search">
 
-<header>
-<strong> Ecommerce Website </strong>
-	<nav>
-		<ul>
-			<li><a href="{{site.baseurl}}/index.html">Home</a></li>
-			<li><a href="{{site.baseurl}}/news.html">News</a></li>
-		</ul>
-	</nav>
-</header>
+			<form action="javascript:void(0);" method="GET">
+
+				<fieldset class="clearfix">
+
+					<input type="search" name="search" value="What are you looking for?" onBlur="if(this.value=='')this.value='What are you looking for?'" onFocus="if(this.value=='What are you looking for?')this.value='' "> <!-- JS because of IE support; better: placeholder="What are you looking for?" -->
+					<input type="submit" value="Search" class="button">
+
+				</fieldset>
+
+			</form>
+
+		</div> <!-- end search -->
+
+	</div> <!-- end container -->	
+	</div>
+</div>
 
 {{content}}
+
+
+<div class="grid grid-footer">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
+		<p>Copyright c	</p>
+		</div>
+		
+		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		<ul class="list-group social">
+			<li class="list-group-item list-group-item-inline">
+				<a href="#"><img src= "http://placehold.it/32x32/00AABA" alt= "facebook"></a>
+			</li>
+			
+			<li class="list-group-item list-group-item-inline">
+				<a href="#"><img src= "http://placehold.it/32x32/D6EEEA" alt= "twitter"></a>
+			</li>
+			
+			<li class="list-group-item list-group-item-inline">
+				<a href="#"><img src= "http://placehold.it/32x32/8E8E06" alt= "email"></a>
+			</li>
+		</ul>
+		</div>
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
+		<p><a href="#"> Back to top</a></p>	
+	</div>
+</div>
+
 
 </body>
 </html>
