--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
 		<h2><a href="#" class="boy"> Boys</a>	</h2>
 		</div>
-	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
-		<a href="#"><img class="img-flex" src="http://placehold.it/400x80" alt=""></a>	
-	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
+			<h2><a href="{{site.baseurl}}/index.html" class="logo"><img src="../images/logo.png"</a></a></h2>
+		</div>
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
 		<h2><a href="#" class="girl" > Girls</a></h2>	
 	</div>
