--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,13 +25,16 @@
 <body>
 <div class="grid grid-header">
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
-		<h2><a href="#" class="boy"> Boys</a>	</h2>
-		</div>
+		<h2><a href="{{site.baseurl}}/about/" class="boy"> About</a>	</h2>
+	</div>
+	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
+		<h2><a href="{{site.baseurl}}/../styleguide/product-list-item.html" class="boy"> Boys</a>	</h2>
+	</div>
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
 			<h2><a href="{{site.baseurl}}/index.html" class="logo"><img src="../images/logo.png"</a></a></h2>
-		</div>
+	</div>
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
-		<h2><a href="#" class="girl" > Girls</a></h2>	
+		<h2><a href="{{site.baseurl}}/grid/" class="girl" > Girls</a></h2>	
 	</div>
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
 		<div class="container">
@@ -60,9 +63,9 @@
 <div class="grid grid-footer">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
 		<p>Copyright c	</p>
-		</div>
+	</div>
 		
-		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<ul class="list-group social">
 			<li class="list-group-item list-group-item-inline">
 				<a href="#"><img src= "http://placehold.it/32x32/00AABA" alt= "facebook"></a>
@@ -76,7 +79,7 @@
 				<a href="#"><img src= "http://placehold.it/32x32/8E8E06" alt= "email"></a>
 			</li>
 		</ul>
-		</div>
+	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
 		<p><a href="#"> Back to top</a></p>	
