product grid laid out correctly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,14 +25,17 @@
 <body>
 <div class="grid grid-header">
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
-		<h2><a href="{{site.baseurl}}/about/" class="boy"> About</a>	</h2>
+		<h2><a class="current" href="{{site.baseurl}}/about/" > About</a>	</h2>
 	</div>
+	
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
 		<h2><a href="{{site.baseurl}}/../styleguide/product-list-item.html" class="boy"> Boys</a>	</h2>
 	</div>
+	
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-1-4">
 			<h2><a href="{{site.baseurl}}/index.html" class="logo"><img src="../images/logo.png"</a></a></h2>
 	</div>
+	
 	<div class="unit gutter unit-s-1 unit-m-1-4 unit-l-1-4">
 		<h2><a href="{{site.baseurl}}/grid/" class="girl" > Girls</a></h2>	
 	</div>
