--- a/css/header.css
+++ b/css/header.css
@@ -21,6 +21,12 @@ NEUTRALS
 	text-align:center;
 }
 
+.grid-search{
+	background-color: #e7fffa;
+	padding-bottom: 3.75rem;
+}
+
+
 .baby-logo{
 	width:5px
 }
