changed size of baby logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
 <div class="grid grid-header">
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2><a class="baby-logo {% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img src="../images/logo.png"</a> </h2>
+		<h2><a class="{% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img class="baby-logo" src="../images/logo.png"</a> </h2>
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
