--- a/_includes/promo-small.html
+++ b/_includes/promo-small.html
@@ -1,8 +1,19 @@
+
+
 <div class="promo-small">
-	<img class="img-flex" src="{{site.baseurl}}/images/{{include.image}}" alt="">
+	<div class="media">
+		
+		<div class="media-img media-img-stacked">
+			<img class="img-flex" src="/images/{{include.image}}" alt="">
+		</div>
+		
+		<div class="media-details">
+			<h2 class="mega space-none">{{include.title}}</h2>
+			<p>{{include.desc}}</p>
+		</div>
+		</div>
 	
-	<div class="gutter">
-	<h2>{{include.title}}</h2>
-	<p>{{include.desc}}</p>
-	</div>
+	<a class="btn-boy micro" href="#"> Buy Now!</a>
 </div>
+
+
