created boys and girls clothing folders with index inside

--- a/_includes/promo-large.html
+++ b/_includes/promo-large.html
@@ -6,9 +6,9 @@
 			<img class="img-flex" src="/images/{{include.image}}" alt="">
 		</div>
 			<div class="media-details">
-					<p class="mega space-none">{{include.title}}</p>
+					<h2 class="yotta space-none">{{include.title}}</h2>
 					<p class="micro">{{include.desc}}</p>
-					<p class="mega space-none">{{include.price}}</p>
+					<h2>{{include.price}}</h2>
 			</div>
 		</div>
 	<a class="btn-boy micro" href="#"> Buy Now!</a>
