--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!doctype html>
+b<!doctype html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -25,43 +25,8 @@
 </head>
 <body>
 
-{{page.url}}
+{% include nav.html %}
 
-<div class="grid grid-header">
-	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2><a class="{% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img class="baby-logo" src="../images/logo.png"</a> </h2>
-	</div>
-	
-	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2><a class="boy {% if page.url contains 'about' %}current{% endif %}" href="{{site.baseurl}}/about">About</a></h2>
-	</div>
-	
-	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2><a class="boy {% if page.url contains '/grid-boy/' %}current{% endif %}" href="{{site.baseurl}}/grid-boy/">Boys</a></h2>
-	</div>
-	
-	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-         <h2><a class="{% if page.url contains '/grid-girl/' %}current{% endif %}" href="{{site.baseurl}}/grid-girl/">Girls</a></h2>
-	</div>
-</div>
-	
-<div class="grid grid-search">
-	<div class="unit gutter unit-s-1 unit-m-1 unit-l-1">
-		<div class="container">	
-		<div id="search">
-			<form action="javascript:void(0);" method="GET">
-				<fieldset class="clearfix">
-					<input type="search" name="search" value="What are you looking for?" onBlur="if(this.value=='')this.value='What are you looking for?'" onFocus="if(this.value=='What are you looking for?')this.value=" "> <!-- JS because of IE support; better: placeholder="What are you looking for?" -->
-					<input type="submit" value="Search" class="button">
-
-				</fieldset>
-
-			</form>
-
-		</div> 
-	</div>
-</div>
-</div>
 
 {% if page.showbanner %}
 <div class="banner">
@@ -72,32 +37,7 @@
 
 {{content}}
 
-
-<div class="grid grid-footer">
-	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
-		<p>Copyright c	</p>
-	</div>
-		
-	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-		<ul class="list-group social">
-			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img src= "http://placehold.it/32x32/00AABA" alt= "facebook"></a>
-			</li>
-			
-			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img src= "http://placehold.it/32x32/D6EEEA" alt= "twitter"></a>
-			</li>
-			
-			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img src= "http://placehold.it/32x32/8E8E06" alt= "email"></a>
-			</li>
-		</ul>
-	</div>
-	
-	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
-		<p><a href="#"> Back to top</a></p>	
-	</div>
-</div>
+{% include footer.html %}
 
 
 </body>
