added background colours to promo-large and small
- added pages to boys-clothing/tops and bottoms and shoes as well as
for girls-clothing. list still not showing up

--- a/_includes/promo-large.html
+++ b/_includes/promo-large.html
@@ -1,6 +1,6 @@
 
 
-<div class="promo-large">
+<div class="<promo-large">
 	<div class="media">
 		<div class="media-img media-img-stacked">
 			<img class="img-flex" src="/images/{{include.image}}" alt="">
