--- a/css/header.css
+++ b/css/header.css
@@ -36,8 +36,8 @@ NEUTRALS
 
 .banner{
 	background: #FFD2F7 url("../images/banner.jpg") no-repeat center center;
-	background-size: cover;
-	padding: 16em 1em 1em;
+	background-size:cover;
+	padding: 16em 1em 1em-;
 	text-align: center;
 }
 
