--- a/css/header.css
+++ b/css/header.css
@@ -17,12 +17,12 @@ NEUTRALS
  
 
 .grid-header{
-	background-color: #e7fffa;
+	background-color: #DEE1E0;
 	text-align:center;
 }
 
 .grid-search{
-	background-color: #e7fffa;
+	background-color: #A89E8F;
 }
 
 
