--- a/css/grid.css
+++ b/css/grid.css
@@ -16,13 +16,16 @@
 }
 
 .grid-promo-large {
-	margin: 0 auto;
+	margin-top:1rem;
+	margin-left: auto;
+	margin-right: auto;
 	max-width: 600px;
-	background-color: #CBBA82;
+	background-color: #DEE1E0;
+	
 }
 
 .grid-promo-small {
-	background-color: #9B6840;
+	background-color: #A2A2A2;
 }
 
 .opera-only :-o-prefocus, .grid {
