creating search include

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,7 +22,7 @@
 		<div id="search">
 			<form action="{{site.baseurl}}/search/" method="GET">
 				<fieldset class="clearfix">
-					<input type="search" name="search" value="What are you looking for?" onBlur="if(this.value=='')this.value='What are you looking for?'" onFocus="if(this.value=='What are you looking for?')this.value=" "> <!-- JS because of IE support; better: placeholder="What are you looking for?" -->
+					<input type="search" name="search" value="Search for..." onBlur="if(this.value=='')this.value='Search for...'" onFocus="if(this.value=='What are you looking for?')this.value=" "> <!-- JS because of IE support; better: placeholder="Search for..." -->
 					<input type="submit" value="Search" class="button">
 
 				</fieldset>
