--- a/_includes/promo-small.html
+++ b/_includes/promo-small.html
@@ -8,7 +8,7 @@
 		</div>
 		
 		<div class="media-details">
-			<h2 class="mega space-none">{{include.title}}</h2>
+			<p class="mega space-none">{{include.title}}</h2>
 			<p>{{include.desc}}</p>
 		</div>
 		</div>
