--- a/css/typography.css
+++ b/css/typography.css
@@ -103,7 +103,7 @@ h1, h2, h3 ,h4 ,h5, h6,
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-weight: 400;	
 	text-transform:uppercase;
-	color: #00AABA;
+	color: #FFFFFF;
 }
 
 p{
