added descriptions to specific search units

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,7 +12,7 @@
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-         <h2><a class="{% if page.url contains '/grid-girl/' %}current{% endif %}" href="{{site.baseurl}}/grid-girl/">Girls</a></h2>
+         <h2><a class="{% if page.url contains '/grid-girl/' %}current{% endif %}" href="{{site.baseurl}}/grid-girl">Girls</a></h2>
 	</div>
 </div>
 	
