made all buttons  bring user to cart page

--- a/_includes/promo-large.html
+++ b/_includes/promo-large.html
@@ -11,5 +11,5 @@
 					<h2>{{include.price}}</h2>
 			</div>
 		</div>
-	<a class="btn-boy micro" href="#"> Buy Now!</a>
+	<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
 </div>
