--- a/_includes/promo-small.html
+++ b/_includes/promo-small.html
@@ -1,5 +1,4 @@
 
-
 <div class="promo-small">
 	<div class="media">
 		
@@ -13,7 +12,7 @@
 		</div>
 		</div>
 	
-	<a class="btn-boy micro" href="#"> Buy Now!</a>
+	<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
 </div>
 
 
