--- a/_includes/promo-small.html
+++ b/_includes/promo-small.html
@@ -7,7 +7,7 @@
 		</div>
 		
 		<div class="media-details">
-			<p class="mega space-none">{{include.title}}</h2>
+			<p class="mega space-none">{{include.title}}</p>
 			<p>{{include.desc}}</p>
 		</div>
 		</div>
