--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -15,7 +15,7 @@ NEUTRALS
   
  */
  
- body{
+body{
 	background-color:#C0B494;
  }
  
@@ -48,6 +48,7 @@ blockquote, table, hr {
 .zetta {
   font-size: 2.0273rem;
   line-height: 1.4798;
+  text-align: center;
 }
 
 h1, .exa {
@@ -112,6 +113,7 @@ p{
 	font-size:1rem;
 }
 
+
 .brand-family{
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 }
@@ -120,7 +122,7 @@ p{
 	color: #6B9797;
 }
 
-::selection{
+.selection{
 	background-color: #32FFEB;
 	color: #fff;
 }
@@ -145,6 +147,18 @@ a:focus,
 a:active{
 	color: #fff;
 	border-bottom-color:#8E8E06;
+}
+
+a:hover,
+a:active {
+		/* It is okay to remove the focus rectangle for mouse actions */
+	outline: none;
+}
+
+a:focus,
+input:focus{
+	/* Focus must ALWAYS have a focus rectanlge for keyboard users */
+	outline:3px solid #000;
 }
 
 /* GIRL LINK STYLING */
@@ -203,3 +217,4 @@ td{
 
 .cart{
 	max-width: 120px;
+}
