--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div class="grid grid-footer">
+<div class="grid grid-footer"role="contentinfo">
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
 		<p>Copyright c	</p>
 	</div>
