removed underlines on links

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -22,7 +22,7 @@
 						</li>
 					</ul>
 				</div>
-				<a class="btn-boy micro" href="#"> Buy Now!</a>
+				<a class="btn-boy micro" href="{{site.baseurl}}/cart/"> Buy Now!</a>
 			</div>
 
 
