--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="grid grid-header" role="navigation">
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2><a class="{% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img class="baby-logo" src="../images/logo.png"></a> </h2>
+		<h2><a class="{% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img class="baby-logo" src="../images/logo.png" alt="Home"></a> </h2>
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
@@ -22,7 +22,7 @@
 		<div id="search">
 			<form action="{{site.baseurl}}/search/" method="GET">
 				<fieldset class="clearfix">
-					<input type="search" name="search" value="Search for..." onBlur="if(this.value=='')this.value='Search for...'" onFocus="if(this.value=='What are you looking for?')this.value=" "> <!-- JS because of IE support; better: placeholder="Search for..." -->
+					<input type="search" name="search" placeholder="Search for...">
 					<input type="submit" value="Search" class="button">
 
 				</fieldset>
