--- a/_includes/css/forms.css
+++ b/_includes/css/forms.css
@@ -85,11 +85,11 @@ input[type="search"]::-webkit-search-decoration {
 	background: #fff;
 	color: #42454e;
 	padding: 6px 8px;
-	width: 200px
+	width: 120px
 }
 
 #search input[type="submit"] {
-	background: lightgreen;
+	background: #B8E62E;
 	color: #fff;
 	margin-left: 7px;
 	padding: 6px 10px;
