--- a/_includes/css/grid.css
+++ b/_includes/css/grid.css
@@ -20,7 +20,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 600px;
-	background-color: #DEE1E0;
+	background-color: #846E58;
 	
 }
 
@@ -58,6 +58,8 @@
 
 .unit-s-1{
 	width: 100%;
+	text-align: center;
+	padding-top: .5rem;
 }
 
 .unit-s-1-2{
@@ -80,6 +82,7 @@
 	
 	.unit-m-1-4{
 		width: 25%;
+	}
 }
 
 @media only screen and (min-width: 50em) {
