--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -18,6 +18,9 @@ NEUTRALS
 .grid-header{
 	background-color: #846E58;
 	text-align:center;
+	-webkit-box-shadow: inset 0 0 20px #000;
+    -moz-box-shadow: inset 0 0 20px #000;
+    box-shadow: inset 0 0 20px #000;
 }
 
 .grid-search{
