--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,6 @@
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-1-3">
-		<p><a href="#"> Back to top</a></p>	
+		<h2><a href="#"> Back to top</a></h2>	
 	</div>
 </div>
