--- a/_includes/promo-large.html
+++ b/_includes/promo-large.html
@@ -2,7 +2,7 @@
 <div class="<promo-large">
 	<div class="media">
 		<div class="media-img media-img-stacked">
-			<img class="img-flex" src="/images/{{include.image}}" alt="Large Promotion-Boys Pants">
+			<img class="img-flex" src="{{site.baseurl}}/images/{{include.image}}" alt="Large Promotion-Boys Pants">
 		</div>
 			<div class="media-details">
 					<h2 class="yotta space-none">{{include.title}}</h2>
