--- a/_includes/promo-small.html
+++ b/_includes/promo-small.html
@@ -3,7 +3,7 @@
 	<div class="media">
 		
 		<div class="media-img media-img-stacked">
-			<img class="img-flex" src="/images/{{include.image}}" alt="">
+			<img class="img-flex" src="{{site.baseurl}}/images/{{include.image}}" alt="">
 		</div>
 		
 		<div class="media-details">
