--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="grid grid-header" role="navigation">
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
-		<h2><a class="{% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img class="img-flex baby-logo logo-box" src="{{site.baseurl}}../images/logo.png" alt="Home"></a> </h2>
+		<h2><a class="{% if page.url =='/' %}current{% endif %}" href="{{site.baseurl}}/"><img class="img-flex baby-logo logo-box" src="{{site.baseurl}}/images/logo.png" alt="Home"></a> </h2>
 	</div>
 	
 	<div class="unit gutter unit-s-1 unit-m-1-5 unit-l-1-5">
