--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,15 +6,15 @@
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<ul class="list-group social">
 			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img src= "http://placehold.it/32x32/00AABA" alt= "facebook"></a>
+				<a href="www.facebook.com"><img class="small" src= "{{site.baseurl}}/images/facebook.jpg/" alt= "facebook"></a>
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img src= "http://placehold.it/32x32/D6EEEA" alt= "twitter"></a>
+				<a href="www.twitter.com"><img class="small" src= "{{site.baseurl}}/images/twitter.jpg/" alt= "twitter"></a>
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img src= "http://placehold.it/32x32/8E8E06" alt= "email"></a>
+				<a href="www.pinterest.com"><img class="small" src="{{site.baseurl}}/images/pinterest.jpg/ alt= "email"></a>
 			</li>
 		</ul>
 	</div>
