--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
 	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
 		<ul class="list-group social">
 			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img class="small" src= "{{site.baseurl}}/images/facebook.jpg/" alt= "facebook"></a>
+				<a href="#"><img class="small" src="images/facebook.jpg/" alt= "facebook"></a>
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img class="small" src= "{{site.baseurl}}/images/twitter.jpg/" alt= "twitter"></a>
+				<a href="#"><img class="small" src="/images/twitter.jpg/" alt= "twitter"></a>
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
