--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 			</li>
 			
 			<li class="list-group-item list-group-item-inline">
-				<a href="#"><img class="small" src="images/pinterest.jpg/ alt= "email"></a>
+				<a href="#"><img class="small" src="images/pinterest/ alt= "email"></a>
 			</li>
 		</ul>
 	</div>
